kubernetes/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: _{_NAMESPACE_}_
  name: ingress-solar
spec:
  ingressClassName: traefik
  rules:
  - host: nexus.tooskaoil.com
    http:
      paths:
      - backend:
          service:
            name: solar-system
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nexus.tooskaoil.com
    secretName: solar
